# win-file-pdf-converter

./: .env  .env.example  .gitignore  README.md  converter.py  pyproject.toml  run_converter.bat
.github/workflows/: test.yml
.serena/: project.yml
.serena/memories/: coding_conventions.md  project_overview.md  suggested_commands.md
tests/: test_converter.py
