[project]
name = "win-file-pdf-converter"
version = "0.1.0"
description = "Convert PPT and Excel files to PDF using Windows COM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.2.1",
    "pywin32>=306; sys_platform == 'win32'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = ["tests", ".github", ".git"]
